# ores-mcp-poc

./: README.md  main.py  pyproject.toml
src/: config.py  energy_system.py  mcp_server.py
