[project]
name = "ores-mcp-poc"
version = "0.1.0"
description = "A PoC for MCP in local small scale energy systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp>=3.3.1",
    "pydantic-ai-slim>=1.99.0",
    "pydantic-config>=0.4.0",
    "sqlmodel>=0.0.38",
]

packages = [
    "src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
